infra/k8s/apps/image-apis/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-apis-deployment
  namespace: imageapis
  labels:
    app: image-apis-deployment
spec:
  selector:
    matchLabels:
      app: image-apis-pod
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: image-apis-pod
    spec:
      serviceAccountName: sa
      containers:
        - name: image-apis
          image: zhunismp/image-apis:fd04ded404e4844a6481c7d6ad1043e80c55ee07
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 200m
              memory: 786Mi
            limits:
              cpu: 300m
              memory: 1536Mi
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: image-apis-svc
  namespace: imageapis
spec:
  selector:
    app: image-apis-pod
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
