infra/k8s/apps/image-apis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-apis-ingress
  namespace: imageapis
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/plugins: ip-ratelimit
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  tls:
    - hosts:
      - imagep.zhunismp.dev
      secretName: imagep-tls

  rules:
    - host: imagep.zhunismp.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: image-apis-svc
                port:
                  number: 80
